Fix issue in metadata JSON when solution contains multiple files (#107)